# scala-2_13-parser

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/ast/: fLangOperand.hpp
include/ast/leaf/: fAccessModifier.hpp  fAccessQualifier.hpp  fAnnotation.hpp  fAnnotations.hpp  fBlock.hpp  fCaseClause.hpp  fCaseClauses.hpp  fClassConstr.hpp  fClassDef.hpp  fClassParam.hpp  fClassParamClauses.hpp  fClassParents.hpp  fClassTemplate.hpp  fCompileUnit.hpp  fConstrBlock.hpp  fFor.hpp  fFun.hpp  fFunSig.hpp  fFunTypeParamClause.hpp  fFunc.hpp  fGenerator.hpp  fId.hpp  fIds.hpp  fIf.hpp  fImport.hpp  fLangOperand.hpp  fLiteral.hpp  fLocalModifier.hpp  fModifier.hpp  fModifiers.hpp  fNamedFun.hpp  fObject.hpp  fObjectDef.hpp  fOverrideModifier.hpp  fPackage.hpp  fParam.hpp  fParamClauses.hpp  fParamType.hpp  fParamTypes.hpp  fRegFunc.hpp  (+23 more)
include/ast/node/: EnclosingScope.hpp  EnclsScope.hpp  EnclsScopeFwd.hpp  fAstNod.hpp  fAstNodKndE.hpp  fAstNodVisitor.hpp  fAstOprndNod.hpp  fAstOptrNod.hpp  fAstProdSubTreeN.hpp  fAstRootOptrNod.hpp  fLangAstVisitor.hpp  fLangTree.hpp
include/ast/symbol/: XEnclSc.hpp  XVisitor.hpp  ZEnclScope.hpp  ZEnclScopeFwd.hpp  ZEnclosingScope.hpp  ZEnclosingScopeFwd.hpp  ZEnclsScopeFwd.hpp  ZError.hpp  ZLangConstruct.hpp  ZSymScope.hpp  ZSymbol.hpp  ZSymbolBox.hpp
include/ast/tree/: fLangAstTree.hpp  fLangAstVisitor.hpp  fLangTree.hpp
include/back/code/: XCodeGen.hpp  XVisitor.hpp
include/back/tree/: ZVisitBlockHelp.hpp  ZVisitCaseHelp.hpp  ZVisitClassHelp.hpp  ZVisitFuncHelp.hpp  ZVisitHelp.hpp  ZVisitLoopHelp.hpp  ZVisitModHelp.hpp  ZVisitPSubTreeHelp.hpp  ZVisitParamHelp.hpp  ZVisitStmtHelp.hpp  ZVisitTypeHelp.hpp  ZVisitTypeParamHelp.hpp  ZVisitUtil.hpp  ZVisitValueHelp.hpp  ZVisitor.hpp  fLangAstVisitor.hpp
include/lex/: fLexerIFace.hpp  fLexerImpl.hpp  fReader.hpp  fTokzr.hpp
include/lex/kind/: fAccessQualifierE.hpp  fLangModifierTypeE.hpp  fLangOperatorKind.hpp  fLangPseudoOperatorKindE.hpp  fTKnd.hpp  fTTagE.hpp  fVarMutTypeE.hpp  fVariableMutabilityTypeE.hpp  fVarianceE.hpp
include/lex/token/: fNumToken.hpp  fToken.hpp
include/lex/util/: fLangMethNameCheck.hpp  fTBuffer.hpp  fUtil.hpp
include/parse/: ZGrmrProdE.hpp  fAst.hpp  fLangGrmrProdE.hpp  fParseHelp.hpp  fParser.hpp
include/util/: fCommon.hpp  fUUID.hpp  fUtil.hpp
include/ztree/: ZLangAstVisitor.hpp  ZTree.hpp
resources/: AnnotationTest.scala  CalcDemo.scala  ClassConstructors.scala  ClassDemo.scala  EmpoyeeDemo.scala  ForLoopTest.scala  MethodSignatures.scala  MethodSignatures_Simple.scala  PackageImportTest.scala  ThisConstrUsage.scala  TypeParamTest.scala  TypeParamTest_Simple.scala  patdef_test.scala  test_001.zeb  test_002.scala  test_002.zeb  test_003_vals_def.scala  test_003_vals_def.zeb  test_004_tuples.scala  test_005_list_head_tail.scala  test_006_class_hierarchy.scala
src/: zebra_main.cpp
src/ast/: fLangOperand.cpp
src/ast/leaf/: fAccessModifier.cpp  fAccessQualifier.cpp  fAnnotation.cpp  fAnnotations.cpp  fBlock.cpp  fCaseClause.cpp  fCaseClauses.cpp  fClassConstr.cpp  fClassDef.cpp  fClassParam.cpp  fClassParamClauses.cpp  fClassParents.cpp  fClassTemplate.cpp  fCompileUnit.cpp  fConstrBlock.cpp  fFor.cpp  fFun.cpp  fFunSig.cpp  fFunTypeParamClause.cpp  fFunc.cpp  fGenerator.cpp  fId.cpp  fIds.cpp  fIf.cpp  fImport.cpp  fLiteral.cpp  fLocalModifier.cpp  fModifier.cpp  fModifiers.cpp  fNamedFun.cpp  fObject.cpp  fObjectDef.cpp  fOverrideModifier.cpp  fPackage.cpp  fParam.cpp  fParamClauses.cpp  fParamType.cpp  fParamTypes.cpp  fRegFunc.cpp  fReturn.cpp  (+22 more)
src/ast/node/: EnclosingScope.cpp  fAstNod.cpp  fAstOprndNod.cpp  fAstOptrNod.cpp  fAstProdSubTreeN.cpp  fLangAstVisitor.cpp  fLangTree.cpp
src/ast/symbol/: XEncloseScope.cpp  XVisitor.cpp  ZEnclScope.cpp  ZEnclosingScope.cpp  ZSymScope.cpp  ZSymbol.cpp  ZSymbolBox.cpp
src/ast/tree/: fLangAstTree.cpp  fLangAstVisitor.cpp  fLangTree.cpp
src/back/code/: XCodeGen.cpp  XVisitor.cpp
src/back/tree/: ZVisitBlockHelp.cpp  ZVisitClassHelp.cpp  ZVisitFuncHelp.cpp  ZVisitHelp.cpp  ZVisitPSubTreeHelp.cpp  ZVisitParamHelp.cpp  ZVisitStmtHelp.cpp  ZVisitTypeHelp.cpp  ZVisitTypeParamHelp.cpp  ZVisitor.cpp  fLangAstVisitor.cpp
src/lex/: fReader.cpp  fTokzr.cpp
src/lex/kind/: fLangOperatorKind.cpp  fLangPseudoOperatorKindE.cpp  fTKnd.cpp
src/lex/token/: fNumToken.cpp  fToken.cpp
src/lex/util/: fLangMethNameCheck.cpp  fUtil.cpp
src/parse/: fAst.cpp  fParseHelp.cpp  fParser.cpp
src/util/: fCommon.cpp  fUtil.cpp
